--- a/harry4_demo.html
+++ b/harry4_demo.html
@@ -49,6 +49,10 @@
       <div>
         <textarea id="about" name="about" rows="5" cols="25"></textarea>
       </div>
+      <div>
+        <label for="tc">Do you agree</label>
+        <input type="checkbox" name="tc" id="tc" checked />
+      </div>
       <label for="submit"></label>
       <div>
         <input type="submit" value="submit now" name="submit" id="submit" />
