navbar files added

--- a/harry4_demo.html
+++ b/harry4_demo.html
@@ -8,13 +8,13 @@
   <body>
     <h3>this is form and label</h3>
     <form action="main.py">
-      <label for="name">Name:</label>
+      <label for="name" >Name:</label>
       <div>
-        <input type="text" id="name" name="myName" />
+        <input type="text" id="name" name="myName" placeholder="enter your name"/>
       </div>
       <label for="gender">Gender</label>
       <div>
-        Male<input type="radio" name="myGender" id="gender" /> Female<input
+        Male<input type="radio" name="myGender" id="gender" placeholder="gender"/> Female<input
           type="radio"
           name="myGender"
           id="gender"
@@ -23,15 +23,15 @@
       </div>
       <label for="dob">Date of birth</label>
       <div>
-        <input type="date" id="dob" name="dob" />
+        <input type="date" id="dob" name="dob" placeholder="date of birth"/>
       </div>
       <label for="email">Email</label>
       <div>
-        <input type="email" id="email" name="myEmail" />
+        <input type="email" id="email" name="myEmail" placeholder="email_id"/>
       </div>
       <label for="phno">Mobile no:</label>
       <div>
-        <input type="text/number" id="phno" name="phNo" />
+        <input type="text/number" id="phno" name="phNo" placeholder="phone no"/>
       </div>
       <label for="class">Enter your class</label>
       <div>
@@ -47,16 +47,16 @@
       </div>
       <label for="about">Write about yourself</label>
       <div>
-        <textarea id="about" name="about" rows="5" cols="25"></textarea>
+        <textarea id="about" name="about" rows="5" cols="25" placeholder="write here"></textarea>
       </div>
       <div>
         <label for="tc">Do you agree</label>
-        <input type="checkbox" name="tc" id="tc" checked />
+        <input type="checkbox" name="tc" id="tc" checked placeholder="are you agree"/>
       </div>
       <label for="submit"></label>
       <div>
-        <input type="submit" value="submit now" name="submit" id="submit" />
-        <input type="reset" value="reset now" name="reset" />
+        <input type="submit" value="submit now" name="submit" id="submit" placeholder="submit now"/>
+        <input type="reset" value="reset now" name="reset" placeholder="reset"/>
       </div>
     </form>
   </body>
