css property files added

--- a/css_display_property.html
+++ b/css_display_property.html
@@ -7,25 +7,46 @@
     <link rel="stylesheet" href="css_display_property.css" />
   </head>
   <body>
+    <header class="top">
+      <img src="logo.jpeg" alt="" srcset="" />
+      <h1 class="top_h1">Welcome to harry's blog</h1>
+    </header>
+    <div class="container">
+      <div class="box">
+        <h1 class="heading">First box</h1>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati
+          quo totam fugiat reprehenderit cumque officia debitis eum, aspernatur
+          exercitationem nisi provident. Repellendus, perspiciatis sint cum
+          laudantium dolorem possimus voluptatem, illum aut ea molestiae cumque
+          enim ipsa eos harum laborum quibusdam debitis, vitae assumenda quaerat
+          tempora?
+        </p>
+      </div>
 
-<header class="top">
-    <h1>Welcome to harry's blog</h1>
-    
-</header>
+      <div class="box">
+        <h1 class="heading">Second box</h1>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati
+          quo totam fugiat reprehenderit cumque officia debitis eum, aspernatur
+          exercitationem nisi provident. Repellendus, perspiciatis sint cum
+          laudantium dolorem possimus voluptatem, illum aut ea molestiae cumque
+          enim ipsa eos harum laborum quibusdam debitis, vitae assumenda quaerat
+          tempora?
+        </p>
+      </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+      <div class="box">
+        <h1 class="heading">Third box</h1>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati
+          quo totam fugiat reprehenderit cumque officia debitis eum, aspernatur
+          exercitationem nisi provident. Repellendus, perspiciatis sint cum
+          laudantium dolorem possimus voluptatem, illum aut ea molestiae cumque
+          enim ipsa eos harum laborum quibusdam debitis, vitae assumenda quaerat
+          tempora?
+        </p>
+      </div>
+    </div>
   </body>
 </html>
