project files added

--- a/project 2/index.html
+++ b/project 2/index.html
@@ -21,7 +21,30 @@
           <li><a href="#">Contact us</a></li>
         </ul>
       </div>
-      <div class="right">i am right</div>
+      <div class="right">
+        <button class="btn">Order Now</button><button class="btn">Login</button>
+      </div>
     </header>
+    <div class="container">
+      <h1>Welcome to Hary's Food Center</h1>
+      <form action="main.py">
+        <div class="get_form">
+          <input type="text" placeholder="Enter yor name" />
+        </div>
+        <div class="get_form">
+          <input type="text" placeholder="Enter yor gender" />
+        </div>
+        <div class="get_form">
+          <input type="text" placeholder="Enter yor email" />
+        </div>
+        <div class="get_form">
+          <input type="text" placeholder="Enter yor phone no" />
+        </div>
+        <div class="get_form">
+          <input type="text" placeholder="Enter yor address" />
+        </div>
+        <button class="btn">Submit</button>
+      </form>
+    </div>
   </body>
 </html>
