--- a/project 3/index.html
+++ b/project 3/index.html
@@ -10,7 +10,7 @@
     <header class="head">
       <div class="left">
         <!-- adding our  logo -->
-     <img src="/img/logo4.png" alt="">
+        <img src="/img/logo4.png" alt="" />
         <div>Harry Music club</div>
       </div>
       <div class="mid">
@@ -22,7 +22,28 @@
           <li><a href="#">Contact us</a></li>
         </ul>
       </div>
-      <div class="right">i am right</div>
+      <div class="right">
+        <button class="btn">Login</button>
+        <button class="btn">Sign up</button>
+      </div>
     </header>
+    <div class="container">
+      <h1>Welcome to Music club</h1>
+      <form action="main.py">
+        <div class="get_form">
+          <input type="text" placeholder="Enter your Name" />
+        </div>
+        <div class="get_form">
+          <input type="text" placeholder="Enter your phone no" />
+        </div>
+        <div class="get_form">
+          <input type="email" placeholder="Enter your email-id" />
+        </div>
+        <div class="get_form">
+          <input type="text" placeholder="Enter your locality" />
+        </div>
+        <button class="btn">Submit</button>
+      </form>
+    </div>
   </body>
 </html>
